--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_MTC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_MTC.cshtml
@@ -61,50 +61,22 @@
             </div>
             <div id="divMTCPPTip" class="Warn" style="z-index: 995;"></div>
         </div>
-        <div id="divXSQK" class="div_row" style="z-index: 994;">
-            <div class="div_row_left">
+        <div id="divXJCD" class="div_row" style="z-index: 994;">
+            <div class="div_row_left font_two">
                 <span class="span_required">*</span>
-                <span class="spanFWCZ">行驶情况</span>
+                <span class="spanFWCZ">新旧</span>
             </div>
             <div class="div_row_right">
-                <div class="div_radio" id="div_xslc_xcwxs">
-                    <img class="img_radio" id="img_xslc_xcwxs" /><label class="label_radio">新车未行使</label>
-                </div>
-                <div class="div_radio" id="div_xslc_yxs">
-                    <img class="img_radio" id="img_xslc_yxs" /><label class="label_radio">已行使</label>
-                </div>
-            </div>
-            <div id="divXSQKTip" class="Warn" style="z-index: 993;"></div>
-        </div>
-        <div id="divGLS" class="div_row" style="z-index: 992; display: none;">
-            <div class="div_row_left font_three">
-                <span class="span_required">*</span>
-                <span class="spanFWCZ">公里数</span>
-            </div>
-            <div class="div_row_right">
-                <span id="spanGLS" class="span_spaninput SRK" style="display: inline-block;">
-                    <input class="input_spaninput spaninput_fontcolor" id="GLS" maxlength="9" column="GLS" type="text" style="width: 100px" />
-                    <span class="spaninput_fontcolor">公里</span>
-                </span>
-            </div>
-            <div id="divGLSTip" class="Warn" style="z-index: 991;"></div>
-        </div>
-        <div id="divMTCGCSJ" class="div_row" style="z-index: 990; display: none;">
-            <div class="div_row_left">
-                <span class="span_required">*</span>
-                <span class="spanFWCZ">购车时间</span>
-            </div>
-            <div class="div_row_right">
-                <div id="divGCSJText" class="div_select_out SRK">
-                    <div id="divGCSJSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                        <span id="spanGCSJ" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择购车时间</span>
+                <div id="divXJText" class="div_select_out SRK" style="z-index: 994;">
+                    <div id="divXJSpan" class="div_select_in" style="border: none; margin-top: 6px;">
+                        <span id="spanXJ" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择新旧</span>
                         <div class="span_select_arrow"></div>
                     </div>
-                    <div id="divGCSJ" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
+                    <div id="divXJ" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                     </div>
                 </div>
             </div>
-            <div id="divMTCGCSJTip" class="Warn" style="z-index: 989;"></div>
+            <div id="divXJCDTip" class="Warn" style="z-index: 993;"></div>
         </div>
         <div id="divJG" class="div_row" style="z-index: 988;">
             <div class="div_row_left">
