--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Common/Img.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Common/Img.css
@@ -22,20 +22,18 @@
 
 .li_img {
     display: inline-block;
-    width: 130px;
-    height: 100px;
-   
+    width: 150px;
+    height: 120px;
     float: left;
     margin-right: 10px;
 }
 
 .divImg {
-    width: 130px;
-    height: 100px;
+    width: 150px;
+    height: 120px;
     display: inline-block;
     margin-right: 10px;
     margin-top: 20px;
-    border-radius: 4px;
     overflow: hidden;
     cursor: move;
 }
@@ -72,7 +70,7 @@
 
 .toolbar {
     position: absolute;
-    left: 0;
+    left: 10px;
     right: 0;
     bottom: 0;
     width: 100%;
@@ -114,7 +112,6 @@
 
 #editImgWindow {
     display: none;
-    border-radius: 4px;
     width: 936px;
     height: 562px;
     position: fixed;
