--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Common/Img.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Common/Img.css
@@ -23,7 +23,7 @@
 .li_img {
     display: inline-block;
     width: 150px;
-    height: 120px;
+    height: 150px;
     float: left;
     margin-right: 10px;
 }
@@ -32,40 +32,18 @@
     width: 150px;
     height: 120px;
     display: inline-block;
-    margin-right: 10px;
-    margin-top: 20px;
     overflow: hidden;
     cursor: move;
 }
 
 .div_toolbar_wrap {
-    width: 130px;
-    height: 100px;
-    cursor: move;
+    width: 150px;
+    height: 30px;
     display: none;
-    position: absolute;
-    top: 20px;
-    left: 0;
-}
-
-    .div_toolbar_wrap:hover {
-        display: block;
-        width: 130px;
-        height: 100px;
-        cursor: move;
-    }
-
-
-.opacity {
-    position: absolute;
-    left: 0;
-    right: 0;
+    display: block;
     bottom: 0;
-    width: 100%;
-    height: 20px;
-    background-color: #000;
-    opacity: 0.3;
-    z-index: 900;
+    left: 0;
+    background-color: #eeeff1;
 }
 
 .toolbar {
@@ -74,41 +52,46 @@
     right: 0;
     bottom: 0;
     width: 100%;
-    height: 20px;
+    height: 30px;
     z-index: 901;
     cursor: default;
 }
 
 .edit {
-    background-image: url(../images/edit.png);
-    width: 20px;
-    height: 20px;
-    position: absolute;
-    text-decoration: none;
-    right: 22px;
-    top: 0;
+    background-color: #bc6ba6;
+    width: 40px;
+    height: 24px;
+    margin-top: 3px;
+    font-size: 14px;
+    color: #ffffff;
+    padding: 1px 6px;
+    display: inline-block;
     cursor: pointer;
+    float: right;
+    margin-right: 5px;
 }
 
-    .edit:active {
-        background-image: url(../images/edit_select.png);
-    }
-
+.edit:hover {
+    background-color: #ad5b97;
+}
 
 .delete {
-    background-image: url(../images/delete.png);
-    width: 20px;
-    height: 20px;
-    position: absolute;
-    text-decoration: none;
-    right: 0;
-    top: 0;
+    background-color: #bc6ba6;
+    width: 40px;
+    height: 24px;
+    margin-top: 3px;
+    font-size: 14px;
+    color: #ffffff;
+    padding: 1px 6px;
+    display: inline-block;
     cursor: pointer;
+    float: right;
+    margin-right: 0;
 }
 
-    .delete:active {
-        background-image: url(../images/delete_select.png);
-    }
+.delete:hover {
+    background-color: #ad5b97;
+}
 
 #editImgWindow {
     display: none;
@@ -186,13 +169,11 @@
     width: 60px;
     display: inline-block;
     cursor: pointer;
-   
     color: gray;
 }
 
     .editToolButton span {
         display: inline-block;
-        position: absolute;
         bottom: 3px;
         left: 15px;
     }
@@ -200,7 +181,6 @@
 .editButtonIcon {
     height: 27px;
     width: 27px;
-    position: absolute;
     left: 17px;
     top: 5px;
 }
