--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Common/XXXX_Common.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Common/XXXX_Common.css
@@ -60,9 +60,9 @@
 .div_body .div_body_right .ul_body_right_jjrtj .li_body_right_jjrtj .div_li_body_right_jjrtj .p_li_body_right_jjrtj_cs{ display: block;color: #999999;margin-bottom: 0;}
 .div_body .div_body_right .ul_body_right_jjrtj .li_body_right_jjrtj .div_li_body_right_jjrtj .p_li_body_right_jjrtj_jg{ color: #bc6ba6;display: block;font-size: 14px;font-weight: 700;margin-bottom: 0;}
 /*首页_主体_右部_相关类目*/
-.div_body .div_body_right .div_body_right_xglm{ width: 100%;height: 300px;float: right;border-radius: 2px;background-color: #ffffff;border: 1px solid #cccccc;padding: 20px;}
+.div_body .div_body_right .div_body_right_xglm{ width: 100%;height: auto;float: right;border-radius: 2px;background-color: #ffffff;border: 1px solid #cccccc;padding: 20px;}
 .div_body .div_body_right .div_body_right_xglm .p_body_right_xglm{ font-size: 18px;height: 35px;border-bottom: 1px solid #cccccc;}
-.div_body .div_body_right .ul_body_right_xglm{ padding: 0;height: 110px;width: 280px; }
+.div_body .div_body_right .ul_body_right_xglm{ padding: 0;height: auto;width: 280px; }
 .div_body .div_body_right .ul_body_right_xglm .li_body_right_xglm{ width: 140px;display: inline-block;margin-bottom: 10px;color: #333333;}
 .div_body .div_body_right .ul_body_right_xglm .li_body_right_xglm:hover{ cursor: pointer;text-decoration: underline;color: #bc6ba6;}
 .div_body .div_body_right .div_body_right_xglm .em_body_right_xglm{ height: 1px;width: 260px;margin-top: 10px;margin-bottom: 10px;display: block;background-color: #cccccc;}
@@ -70,7 +70,7 @@
 
 .div_body .div_body_left .div_body_left_body_right .span_body_left_body_right_zj .span_zj{ font-weight: 700;font-size: 32px;}
 
-.div_body .div_body_left .div_body_left_body_xq .div_body_left_body_xq_xx_bcms{ height: 300px;overflow: hidden;}
+.div_body .div_body_left .div_body_left_body_xq .div_body_left_body_xq_xx_bcms{ height: auto;overflow: hidden;}
 
 .div_body_left_body_xq_zk_bcms{display: block; width: 820px;height: 48px;text-align: center;float: left;color: #bc6ba6;cursor: pointer;}
 .div_body_left_body_xq_zk_bcms .i_body_left_body_xq_zk_bcms{width: 12px;height: 12px;display: inline-block;background-image: url(../images/head_nav_down1.png);margin-left: 5px;}
