--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/LYJDCX/LYJDCX_GNY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/LYJDCX/LYJDCX_GNY.cshtml
@@ -1,5 +1,4 @@
 ﻿@{
-
     Layout = "~/Areas/Business/Views/Shared/CXLB.cshtml";
 }
 @section Section_Head {
@@ -11,8 +10,9 @@
 @section Section_Body {
     <div id="divCondition" class="div_condition">
         <div id="div_condition_body_YWTS" class="div_condition_body" style="padding-top: 20px;"></div>
+        <div id="div_condition_body_CYLB" class="div_condition_body"></div>
         <div id="div_condition_body_CYFS" class="div_condition_body"></div>
-        <div id="div_condition_body_MSJ" class="div_condition_body"></div>
+        <div id="div_condition_body_JG_CR" class="div_condition_body"></div>
         <div id="div_condition_body_QY" class="div_condition_body"></div>
     </div>
     <div id="divConditionSelect" class="div_condition_select">
