--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/LYJD/LYJD_GNY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/LYJD/LYJD_GNY.cshtml
@@ -22,48 +22,41 @@
                 <div id="divBTTip"></div>
             </div>
         </div>
-        <div id="divXLTS" class="div_row" style="z-index: 997;height: 253px;">
-            <div class="div_row_left" style="height: 70px; vertical-align: top;">
-                <span class="span_required" style="vertical-align: top">*</span>
-                <span id="spanXLTS" style="vertical-align: top">线路特色</span>
-            </div>
-            <div class="div_row_right">
-                <script id="XLTS" type="text/plain" style="width: 594px; height: 100px; display: inline-block;">
-                </script>
-                <div id="divXLTSTip" class="Warn"></div>
-            </div>
-        </div>
-        <div id="divGNYCYFS" class="div_row" style="z-index: 996">
+        <div id="divCYLB" class="div_row">
             <div class="div_row_left">
                 <span class="span_required">*</span>
-                <span class="spanFWCZ">出游方式</span>
+                <span class="spanCYLB">出游类别</span>
             </div>
             <div class="div_row_right">
-                <div id="divCYFSText" class="div_select_out SRK">
-                    <div id="divCYFSSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                        <span id="spanCYFS" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择出游方式</span>
-                        <div class="span_select_arrow"></div>
-                    </div>
-                    <div id="divCYFS" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
-                    </div>
+                <div class="div_radio" id="div_cylb_gny">
+                    <img class="img_radio" id="img_cylb_gny" /><label class="label_radio">国内游</label>
+                </div>
+                <div class="div_radio" id="div_cylb_cjy">
+                    <img class="img_radio" id="img_cylb_cjy" /><label class="label_radio">出境游</label>
+                </div>
+                <div class="div_radio" id="div_cylb_zby">
+                    <img class="img_radio" id="img_cylb_zby" /><label class="label_radio">周边游</label>
                 </div>
             </div>
-            <div id="divGNYCYFSTip"></div>
+            <div id="divCYLBTip" class="Warn" style="z-index: 999;"></div>
         </div>
-        <div id="divFTRQ" class="div_row" style="z-index: 995">
+        <div id="divCYFS" class="div_row">
             <div class="div_row_left">
                 <span class="span_required">*</span>
-                <span class="spanFWCZ">发团日期</span>
+                <span class="spanCYFS">出游方式</span>
             </div>
             <div class="div_row_right">
-                <div id="div_ftrq_ttft" class="div_radio">
-                    <img class="img_radio" id="img_ftrq_ttft" /><label class="label_radio">天天发团</label>
+                <div class="div_radio" id="div_cyfs_gty">
+                    <img class="img_radio" id="img_cyfs_gty" /><label class="label_radio">跟团游</label>
                 </div>
-                <div id="div_ftrq_xzrq" class="div_radio">
-                    <img class="img_radio" id="img_ftrq_xzrq" /><label class="label_radio">选择日期</label>
+                <div class="div_radio" id="div_cyfs_zjy">
+                    <img class="img_radio" id="img_cyfs_zjy" /><label class="label_radio">自驾游</label>
+                </div>
+                <div class="div_radio" id="div_cyfs_zyx">
+                    <img class="img_radio" id="img_cyfs_zyx" /><label class="label_radio">自由行</label>
                 </div>
             </div>
-            <div id="divFTRQTip"></div>
+            <div id="divCYFSTip" class="Warn" style="z-index: 999;"></div>
         </div>
         <div id="divWFJT" class="div_row" style="z-index: 994">
             <div class="div_row_left">
@@ -117,26 +110,45 @@
             </div>
             <div id="divXCTSTip"></div>
         </div>
-        <div id="divXCAP" class="div_row" style="z-index: 992;height: 253px;">
-            <div class="div_row_left" style="vertical-align: top;">
-                <span class="span_required" style="vertical-align: top">*</span>
-                <span id="spanXCAP" style="vertical-align: top">行程安排</span>
+        <div id="divJG" class="div_row" style="z-index: 992;">
+            <div class="div_row_left font_two">
+                <span class="span_required">*</span>
+                <span class="spanFWCZ">价格</span>
             </div>
             <div class="div_row_right">
-                <script id="XCAP" type="text/plain" style="width: 594px; height: 200px; display: inline-block;">
+                <span id="spanJG_CR" class="span_spaninput" style="width: 166px;">
+                    <span class="spaninput_fontcolor" style="margin-left: 10px;">成人</span>
+                    <input class="input_spaninput spaninput_fontcolor" id="JG_CR" maxlength="5" column="JG_CR" type="text" style="width: 60px" />
+                    <span class="spaninput_fontcolor">元/人</span>
+                </span>
+                <span id="spanJG_ET" class="span_spaninput" style="width: 166px; ">
+                    <span class="spaninput_fontcolor" style="margin-left: 10px;">儿童</span>
+                    <input class="input_spaninput spaninput_fontcolor" id="JG_ET" maxlength="5" column="JG_ET" type="text" style="width: 60px" />
+                    <span class="spaninput_fontcolor">元/人</span>
+                </span>
+            </div>
+            <div id="divJGTip" class="Warn"></div>
+        </div>
+        <div id="divXCAP" class="div_row" style="height: 253px; z-index: 991;">
+            <div class="div_row_left" style="vertical-align: top;">
+                <span class="span_required">&nbsp;</span>
+                <span id="spanXCAP">行程安排</span>
+            </div>
+            <div class="div_row_right">
+                <script id="XCAP" class="div_row_right_bcms" type="text/plain">
                 </script>
                 <div id="divXCAPTip" class="Warn"></div>
             </div>
         </div>
-        <div id="divYDXZ" class="div_row" style="z-index: 991;height: 253px;">
+        <div id="divBCMS" class="div_row" style="display: none;">
             <div class="div_row_left" style="vertical-align: top;">
-                <span class="span_required" style="vertical-align: top">*</span>
-                <span id="spanYDXZ" style="vertical-align: top">预定须知</span>
+                <span class="span_required">*</span>
+                <span id="spanBCMS">补充描述</span>
             </div>
             <div class="div_row_right">
-                <script id="YDXZ" type="text/plain" style="width: 594px; height: 100px; display: inline-block;">
+                <script id="BCMS" class="div_row_right_bcms" type="text/plain">
                 </script>
-                <div id="divYDXZTip" class="Warn"></div>
+                <div id="divBCMSTip" class="Warn"></div>
             </div>
         </div>
         <div id="divFWZP" class="div_row_zp">
@@ -190,56 +202,24 @@
             <span class="span_split">费用说明</span>
             <em class="em_split"></em>
         </div>
-        <div id="divMSJ" class="div_row" style="z-index: 992;">
-            <div class="div_row_left font_three">
-                <span class="span_required">*</span>
-                <span class="spanFWCZ">门市价</span>
-            </div>
-            <div class="div_row_right">
-                <span id="spanMSJ" class="span_spaninput SRK" style="display: inline-block;">
-                    <input class="input_spaninput spaninput_fontcolor" id="MSJ" maxlength="9" column="MSJ" type="text" style="width: 100px" />
-                    <span class="spaninput_fontcolor">元/人</span>
-                </span>
-            </div>
-            <div id="divMSJTip" class="Warn"></div>
-        </div>
-        <div id="divYHJ" class="div_row" style="z-index: 992;">
-            <div class="div_row_left font_three">
-                <span class="span_required">*</span>
-                <span class="spanFWCZ">优惠价</span>
-            </div>
-            <div class="div_row_right">
-                <span id="spanYHJ_CR" class="span_spaninput SRK" style="display: inline-block;">
-                    <span class="spaninput_fontcolor" style="margin-left: 10px;">成人</span>
-                    <input class="input_spaninput spaninput_fontcolor" id="YHJ_CR" maxlength="5" column="YHJ_CR" type="text" style="width: 50px" />
-                    <span class="spaninput_fontcolor">元/人</span>
-                </span>
-                <span id="spanYHJ" class="span_spaninput SRK" style="display: inline-block;">
-                    <span class="spaninput_fontcolor" style="margin-left: 10px;">儿童</span>
-                    <input class="input_spaninput spaninput_fontcolor" id="YHJ_ET" maxlength="5" column="YHJ_ET" type="text" style="width: 50px" />
-                    <span class="spaninput_fontcolor">元/人</span>
-                </span>
-            </div>
-            <div id="divYHJTip" class="Warn"></div>
-        </div>
         <div id="divFYBH" class="div_row" style="z-index: 992;height: 253px;">
             <div class="div_row_left" style="vertical-align: top;">
-                <span class="span_required" style="vertical-align: top">*</span>
-                <span id="spanFYBH" style="vertical-align: top">费用包含</span>
+                <span class="span_required">&nbsp;</span>
+                <span id="spanFYBH">费用包含</span>
             </div>
             <div class="div_row_right">
-                <script id="FYBH" type="text/plain" style="width: 594px; height: 200px; display: inline-block;">
+                <script id="FYBH" class="div_row_right_bcms" type="text/plain">
                 </script>
                 <div id="divFYBHTip" class="Warn"></div>
             </div>
         </div>
         <div id="divZFXM" class="div_row" style="z-index: 992;height: 253px;">
             <div class="div_row_left" style="vertical-align: top;">
-                <span class="span_required" style="vertical-align: top">*</span>
-                <span id="spanZFXM" style="vertical-align: top">自费项目</span>
+                <span class="span_required">&nbsp;</span>
+                <span id="spanZFXM">自费项目</span>
             </div>
             <div class="div_row_right">
-                <script id="ZFXM" type="text/plain" style="width: 594px; height: 200px; display: inline-block;">
+                <script id="ZFXM" class="div_row_right_bcms" type="text/plain">
                 </script>
                 <div id="divZFXMTip" class="Warn"></div>
             </div>
@@ -251,7 +231,7 @@
         <div id="divSZQY" class="div_row" style="z-index: 991;">
             <div class="div_row_left">
                 <span class="span_required">*</span>
-                <span class="spanFWCZ">详细地址</span>
+                <span class="spanFWCZ">商家地址</span>
             </div>
             <div class="div_row_right">
                 <div id="divQYText" class="div_select_out SRK" style="z-index: 990;">
