--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/LYJDCX/LYJDCX_QZFW.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/LYJDCX/LYJDCX_QZFW.cshtml
@@ -1,18 +1,13 @@
 ﻿@{
-
     Layout = "~/Areas/Business/Views/Shared/CXLB.cshtml";
 }
 @section Section_Head {
-
-
     <link href="@Url.Content("~/Areas/Business/Css/CXLB/LYJDCX.css")" rel="stylesheet" />
-    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/CXLB/LYJDCX/LYJDCX_CJY.js")"></script>
+    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/CXLB/LYJDCX/LYJDCX_QZFW.js")"></script>
 }
 @section Section_Body {
     <div id="divCondition" class="div_condition">
-        <div id="div_condition_body_XCTS_R" class="div_condition_body" style="padding-top: 20px;"></div>
-        <div id="div_condition_body_CYFS" class="div_condition_body"></div>
-        <div id="div_condition_body_MSJ" class="div_condition_body"></div>
+        <div id="div_condition_body_LB" class="div_condition_body" style="padding-top: 20px;"></div>
         <div id="div_condition_body_QY" class="div_condition_body"></div>
     </div>
     <div id="divConditionSelect" class="div_condition_select">
