--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Common/XXXX_Common.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Common/XXXX_Common.css
@@ -74,3 +74,13 @@
 
 .div_body_left_body_xq_zk_bcms{display: block; width: 820px;height: 48px;text-align: center;float: left;color: #bc6ba6;cursor: pointer;}
 .div_body_left_body_xq_zk_bcms .i_body_left_body_xq_zk_bcms{width: 12px;height: 12px;display: inline-block;background-image: url(../images/head_nav_down1.png);margin-left: 5px;}
+
+
+.div_body .div_body_left .div_body_left_body_right .p_body_left_body_right .span_body_left_body_right_right_lxdh {font-size: 28px;color: #bc6ba6;}
+.div_body .div_body_left .div_body_left_body_right .p_body_left_body_right .span_body_left_body_right_right_ckwzdh {font-size: 20px;color: #bc6ba6;border-radius: 4px;border:2px solid #bc6ba6;width: 120px;height: 40px;display: inline-block;padding: 3px 18px;cursor: pointer;margin-left: 10px;}
+.div_body .div_body_left .div_body_left_body_right .p_body_left_body_right .span_body_left_body_right_right_ckwzdh:hover{ background: #bc6ba6;color: #ffffff;}
+.div_body .div_body_left .div_body_left_body_right .p_body_left_body_right .span_body_left_body_right_wzdh{display: none; border:2px solid #bc6ba6;width: 360px;height: 160px;z-index: 1001;background: #ffffff;position: relative;top: -50px;left: 0;border-radius: 4px;padding: 10px 20px;}
+.div_body .div_body_left .div_body_left_body_right .p_body_left_body_right .span_body_left_body_right_wzdh .span_body_left_body_right_wzdh_lxdh{ width: 100%;color:#bc6ba6;font-size: 36px;height: 80px;border-bottom: 1px solid #cccccc;display: block;}
+.div_body .div_body_left .div_body_left_body_right .p_body_left_body_right .span_body_left_body_right_wzdh .span_body_left_body_right_wzdh_lxdh .i_body_left_body_right_wzdh_lxdh{float: left;width: 35px;height: 56px;background-size: 100%;margin-right: 10px;display: inline-block;background-image: url(../images/lxdh.png);}
+.div_body .div_body_left .div_body_left_body_right .p_body_left_body_right .span_body_left_body_right_wzdh .span_body_left_body_right_wzdh_ts{ width: 100%;color:#333333;font-size: 14px;height: 60px;display: block;padding-top: 10px;}
+.div_body .div_body_left .div_body_left_body_right .p_body_left_body_right .span_body_left_body_right_wzdh .i_body_left_body_right_wzdh_close{ font-size: 28px;position: relative;width: 20px;height: 20px;display: inline-block;float: right;top: -150px;right: -10px;color: #bc6ba6;cursor: pointer;}
