--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCCX/FCCX_ZZF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCCX/FCCX_ZZF.cshtml
@@ -40,8 +40,8 @@
             <li class="li_body_head" id="li_body_head_first" onclick="SearchByCondition('ALL')"></li>
             <li class="li_body_head" onclick="SearchByCondition('GR')">个人</li>
             <li class="li_body_head" onclick="SearchByCondition('JJR')">经纪人</li>
-            <li class="li_body_head_sort li_body_head_sort_item" style="margin-right: 245px;">租金<i class="i_body_left_sort_up_gray"></i></li>
-            <li class="li_body_head_sort li_body_head_sort_item li_body_head_sort_item_active">时间<i class="i_body_left_sort_down_orange"></i></li>
+            <li class="li_body_head_sort li_body_head_sort_item" style="margin-right: 245px;" onclick="OrderByCondition('ZJ',this)">租金<i class="i_body_left_sort_up_gray"></i></li>
+            <li class="li_body_head_sort li_body_head_sort_item li_body_head_sort_item_active" onclick="OrderByCondition('SJ',this)">时间<i class="i_body_left_sort_down_orange"></i></li>
             <li class="li_body_head_sort">排序:</li>
         </ul>
         <div id="div_body_left" class="div_body_left">
