--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC/FC_DZF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC/FC_DZF.cshtml
@@ -32,69 +32,6 @@
                 <div id="divFWLXTip" class="Warn"></div>
             </div>
         </div>
-        <div id="divZDZQ" class="div_row" style="z-index: 998">
-            <div class="div_row_left">
-                <span class="span_required">*</span>
-                <span class="spanFWCZ">最短租期</span>
-            </div>
-            <div class="div_row_right">
-                <span id="spanZDZQ" class="span_spaninput SRK" style="display: inline-block;">
-                    <input id="ZDZQ" maxlength="9" column="ZDZQ" class="input_spaninput spaninput_fontcolor" type="text" />
-                    <span class="spaninput_fontcolor">天</span>
-                </span>
-                <div id="divZDZQTip" class="Warn"></div>
-            </div>
-        </div>
-        <div id="divZJ" class="div_row" style="z-index: 997;">
-            <div class="div_row_left font_two">
-                <span class="span_required">*</span>
-                <span class="spanFWCZ">租金</span>
-            </div>
-            <div class="div_row_right">
-                <span id="spanZJ" class="span_spaninput SRK" style="display: inline-block;">
-                    <input id="ZJ" maxlength="9" column="ZJ" class="input_spaninput spaninput_fontcolor" type="text" style="width: 124px" />
-                </span>
-                <div id="divZJDWText" class="div_select_out SRK" style="z-index: 997;">
-                    <div id="divZJDWSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                        <span id="spanZJDW" class="span_select spaninput_fontcolor" style="margin-top: 0">元/天</span>
-                        <div class="span_select_arrow"></div>
-                    </div>
-                    <div id="divZJDW" class="div_select_dropdown" style="margin-top: -7px;">
-                    </div>
-                </div>
-                <div id="divZJTip" class="Warn" style="z-index: 996;"></div>
-            </div>
-        </div>
-        <div id="divTS" class="div_row" style="z-index: 995;">
-            <div class="div_row_left">
-                <span class="span_required">*</span>
-                <span class="spanFWCZ">宜租人数</span>
-            </div>
-            <div class="div_row_right">
-                <span id="spanYZRS" class="span_spaninput SRK" style="display: inline-block;">
-                    <input class="input_spaninput spaninput_fontcolor" id="YZRS" maxlength="6" column="YZRS" type="text" style="width: 90px;" />
-                    <span class="spaninput_fontcolor">人宜租</span>
-                </span>
-                <div id="divYZRSTip" class="Warn"></div>
-            </div>
-        </div>
-        <div id="divMJ" class="div_row" style="z-index: 995;">
-            <div class="div_row_left font_two">
-                <span class="span_required">*</span>
-                <span class="spanFWCZ">面积</span>
-            </div>
-            <div class="div_row_right">
-                <span id="spanMJ" class="span_spaninput SRK" style="display: inline-block;">
-                    <input class="input_spaninput spaninput_fontcolor" id="MJ" maxlength="9" column="MJ" type="text" />
-                    <span class="spaninput_fontcolor">㎡</span>
-                </span>
-                <div id="divMJTip" class="Warn"></div>
-            </div>
-        </div>
-        <div id="divXTXX" class="div_split">
-            <span class="span_split">选填信息</span>
-            <em class="em_split"></em>
-        </div>
         <div id="divFWPZ" class="div_row" style="z-index: 988;">
             <div class="div_row_left">
                 <span class="span_required">&nbsp;</span>
@@ -145,7 +82,7 @@
             </div>
             <div class="div_row_right">
                 <span id="spanTFSJ" class="span_spaninput SRK" style="display: inline-block; width: 100px;">
-                    <input class="input_spaninput" id="TFSJ_H" maxlength="9" column="TFSJ_H" type="text" value="08" style="width: 40px" />
+                    <input class="input_spaninput" id="TFSJ_H" maxlength="9" column="TFSJ_H" type="text" value="12" style="width: 40px" />
                     <span class="spaninput_fontcolor">:</span>
                     <input class="input_spaninput" id="TFSJ_M" maxlength="9" column="TFSJ_M" type="text" value="00" style="width: 40px;" />
                 </span>
@@ -203,23 +140,12 @@
         <div id="divBCMS" class="div_row" style="height: 253px; z-index: 988;">
             <div class="div_row_left" style="height: 170px; vertical-align: top;">
                 <span class="span_required" style="vertical-align: top">*</span>
-                <span id="spanBCMS" style="vertical-align: top">房源描述</span>
+                <span id="spanBCMS" style="vertical-align: top">收费标准</span>
             </div>
             <div class="div_row_right">
                 <script id="BCMS" type="text/plain" style="width: 594px; height: 200px; display: inline-block;">
                 </script>
                 <div id="divBCMSTip" class="Warn"></div>
-            </div>
-        </div>
-        <div id="divJYGZ" class="div_row" style="height: 253px;">
-            <div class="div_row_left" style="height: 170px; vertical-align: top;">
-                <span class="span_required" style="vertical-align: top">*</span>
-                <span id="spanJYGZ" style="vertical-align: top">交易规则</span>
-            </div>
-            <div class="div_row_right">
-                <script id="JYGZ" type="text/plain" style="width: 594px; height: 200px; display: inline-block;">
-                </script>
-                <div id="divJYGZTip" class="Warn"></div>
             </div>
         </div>
         <div id="divFWZP" class="div_row_zp">
@@ -273,7 +199,34 @@
             <span class="span_split">联系人信息</span>
             <em class="em_split"></em>
         </div>
-        <div id="divLXR" class="div_row" style="z-index: 993">
+        <div id="divSZQY" class="div_row" style="z-index: 991;">
+            <div class="div_row_left">
+                <span class="span_required">*</span>
+                <span class="spanFWCZ">详细地址</span>
+            </div>
+            <div class="div_row_right">
+                <div id="divQYText" class="div_select_out SRK" style="z-index: 990;">
+                    <div id="divQYSpan" class="div_select_in" style="border: none; margin-top: 6px;">
+                        <input type="hidden" id="QYCode" />
+                        <span id="spanQY" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择区域</span>
+                        <div class="span_select_arrow"></div>
+                    </div>
+                    <div id="divQY" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
+                    </div>
+                </div>
+                <div id="divDDText" class="div_select_out SRK" style="z-index: 990;">
+                    <div id="divDDSpan" class="div_select_in" style="border: none; margin-top: 6px;">
+                        <span id="spanDD" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择地段</span>
+                        <div class="span_select_arrow"></div>
+                    </div>
+                    <div id="divDD" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
+                    </div>
+                </div>
+                <input id="JTDZ" column="JTDZ" class="span_spaninput input_input SRK" type="text" placeholder="请填写具体地址" style="width: 300px" />
+            </div>
+            <div id="divSZQYTip" class="Warn"></div>
+        </div>
+        <div id="divLXR" class="div_row" style="z-index: 989">
             <div class="div_row_left font_three">
                 <span class="span_required">*</span>
                 <span id="spanLXR">联系人</span>
@@ -283,7 +236,7 @@
                 <div id="divLXRTip"></div>
             </div>
         </div>
-        <div id="divLXDH" class="div_row" style="z-index: 993">
+        <div id="divLXDH" class="div_row" style="z-index: 988">
             <div class="div_row_left">
                 <span class="span_required">*</span>
                 <span id="spanLXDH">联系电话</span>
@@ -293,7 +246,7 @@
                 <div id="divLXDHTip"></div>
             </div>
         </div>
-        <div id="divQQ" class="div_row" style="margin-top: -12px;z-index: 993">
+        <div id="divQQ" class="div_row" style="margin-top: -12px;z-index: 987">
             <div class="div_row_left font_three">
                 <span class="span_required"></span>
                 <span id="spanQQ">微信号</span>
