--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC/FC_ESF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC/FC_ESF.cshtml
@@ -38,7 +38,7 @@
                 </div>
                 <div class="div_row_right">
                     <div class="div_select_out" style="z-index: 1000; width: 595px; border: none;">
-                        <div id="divXQMCText" class="div_select_in SRK" style="border: none;">
+                        <div id="divXQMCText" class="div_select_in SRK" style="border: none; width: 100%;">
                             <input id="XQMC" maxlength="30" column="XQMC" class="span_spaninput SRK" style="width: 594px; margin-top: 0px; padding: 4px 12px;" type="text" placeholder="请输入小区名称" />
                             <input id="XQDZ" column="XQDZ" type="hidden" />
                         </div>
@@ -89,7 +89,7 @@
                         </div>
                     </div>
                     <div id="divZXQKText" class="div_select_out">
-                        <div id="divZXQKSpan" class="div_select_in SRK">
+                        <div id="divZXQKSpan" class="div_select_in">
                             <span id="spanZXQK" column="ZXQK" class="span_select spaninput_fontcolor">请选择装修情况</span>
                             <div class="span_select_arrow"></div>
                         </div>
@@ -97,7 +97,7 @@
                         </div>
                     </div>
                     <div id="divZZLXText" class="div_select_out">
-                        <div id="divZZLXSpan" class="div_select_in SRK">
+                        <div id="divZZLXSpan" class="div_select_in">
                             <span id="spanZZLX" column="ZZLX" class="span_select spaninput_fontcolor">请选择住宅类型</span>
                             <div class="span_select_arrow"></div>
                         </div>
@@ -141,7 +141,7 @@
                         </div>
                     </div>
                     <div id="divCQLXText" class="div_select_out">
-                        <div id="divCQLXSpan" class="div_select_in SRK">
+                        <div id="divCQLXSpan" class="div_select_in">
                             <span id="spanCQLX" column="CQLX" class="span_select spaninput_fontcolor">请选择产权类型</span>
                             <div class="span_select_arrow"></div>
                         </div>
@@ -149,7 +149,7 @@
                         </div>
                     </div>
                     <div id="divJZNDText" class="div_select_out">
-                        <div id="divJZNDSpan" class="div_select_in SRK">
+                        <div id="divJZNDSpan" class="div_select_in">
                             <span id="spanJZND" column="JZND" class="span_select spaninput_fontcolor">请选择建筑年代</span>
                             <div class="span_select_arrow"></div>
                         </div>
