--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCCX/FCCX_ESF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCCX/FCCX_ESF.cshtml
@@ -20,6 +20,14 @@
         <div id="div_condition_body_ZZLX" class="div_condition_body"></div>
         <div id="div_condition_body_ZXQK" class="div_condition_body"></div>
         <div id="div_condition_body_FWLD" class="div_condition_body"></div>
+        <div id="div_condition_body_SF" class="div_condition_body" style="display: none;">
+            <ul id="ul_condition_body_SF" class="ul_condition_body">
+                <li class="li_condition_body_first">身份</li>
+                <li class="li_condition_body">全部</li>
+                <li class="li_condition_body">个人</li>
+                <li class="li_condition_body">经纪人</li>
+            </ul>
+        </div>
     </div>
     <div id="divConditionSelect" class="div_condition_select">
         <ul id="ul_condition_select" class="ul_condition_select">
@@ -31,9 +39,12 @@
     </div>
     <div id="divBody" class="div_body" style="margin-top: 0;">
         <ul class="ul_body_head">
-            <li id="li_body_head_first" class="li_body_head"></li>
-            <li class="li_body_head">个人</li>
-            <li class="li_body_head">经纪人</li>
+            <li class="li_body_head" id="li_body_head_first" onclick="SearchByCondition('ALL')"></li>
+            <li class="li_body_head" onclick="SearchByCondition('GR')">个人</li>
+            <li class="li_body_head" onclick="SearchByCondition('JJR')">经纪人</li>
+            <li class="li_body_head_sort li_body_head_sort_item" id="li_body_head_sort_item_SJ" style="margin-right: 245px;" onclick="OrderByCondition('SJ',this)">售价<i class="i_body_left_sort_up_gray"></i></li>
+            <li class="li_body_head_sort li_body_head_sort_item li_body_head_sort_item_active" id="li_body_head_sort_item_GXSJ" onclick="OrderByCondition('GXSJ', this)">时间<i class="i_body_left_sort_down_orange"></i></li>
+            <li class="li_body_head_sort">排序:</li>
         </ul>
         <div id="div_body_left" class="div_body_left">
             <ul id="ul_body_left" class="ul_body_left"></ul>
