--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC/FC_XZL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC/FC_XZL.cshtml
@@ -12,6 +12,21 @@
             <span class="span_split">供求与类型</span>
             <em class="em_split"></em>
         </div>
+        <div id="divSF" class="div_row">
+            <div class="div_row_left font_two">
+                <span class="span_required">*</span>
+                <span class="spanFWCZ">身份</span>
+            </div>
+            <div class="div_row_right">
+                <div class="div_radio" id="div_sf_gr">
+                    <img class="img_radio" id="img_sf_gr" /><label class="label_radio">个人</label>
+                </div>
+                <div class="div_radio" id="div_sf_jjr">
+                    <img class="img_radio" id="img_sf_jjr" /><label class="label_radio">经纪人</label>
+                </div>
+            </div>
+            <div id="divSFTip" class="Warn" style="z-index: 999;"></div>
+        </div>
         <div id="divGQ" class="div_row">
             <div class="div_row_left font_two">
                 <span class="span_required">*</span>
@@ -37,13 +52,13 @@
                     <img class="img_radio" id="img_lx_xzl" /><label class="label_radio">写字楼</label>
                 </div>
                 <div class="div_radio" id="div_lx_swzx">
-                    <img class="img_radio" id="img_lx_swzx"/><label class="label_radio">商务中心</label>
+                    <img class="img_radio" id="img_lx_swzx" /><label class="label_radio">商务中心</label>
                 </div>
                 <div class="div_radio" id="div_lx_szl">
-                    <img class="img_radio" id="img_lx_szl"/><label class="label_radio">商住楼</label>
+                    <img class="img_radio" id="img_lx_szl" /><label class="label_radio">商住楼</label>
                 </div>
                 <div class="div_radio" id="div_lx_yqbg">
-                    <img class="img_radio" id="img_lx_yqbg"/><label class="label_radio">园区办公</label>
+                    <img class="img_radio" id="img_lx_yqbg" /><label class="label_radio">园区办公</label>
                 </div>
                 <div class="div_radio" id="div_lx_qt">
                     <img class="img_radio" id="img_lx_qt" /><label class="label_radio">其他</label>
@@ -146,7 +161,7 @@
                 <span class="spanFWCZ">装修格局</span>
             </div>
             <div class="div_row_right">
-                    <input class="input_input" id="ZXGJ" maxlength="50" column="ZXGJ" type="text" />
+                <input class="input_input" id="ZXGJ" maxlength="50" column="ZXGJ" type="text" />
             </div>
             <div id="divZXGJTip" class="Warn" style="z-index: 988;"></div>
         </div>
