--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC/FC_CW.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC/FC_CW.cshtml
@@ -8,9 +8,24 @@
 }
 @section Section_Body {
     <div id="myTabContent" class="div_content">
-        <div id="divJBXX" class="div_split" style="display: block; text-align: left">
-            <span class="span_split">基本信息</span>
-            <em class="em_split"></em>
+    <div id="divJBXX" class="div_split" style="display: block; text-align: left">
+        <span class="span_split">基本信息</span>
+        <em class="em_split"></em>
+    </div>
+        <div id="divSF" class="div_row">
+            <div class="div_row_left font_two">
+                <span class="span_required">*</span>
+                <span class="spanFWCZ">身份</span>
+            </div>
+            <div class="div_row_right">
+                <div class="div_radio" id="div_sf_gr">
+                    <img class="img_radio" id="img_sf_gr" /><label class="label_radio">个人</label>
+                </div>
+                <div class="div_radio" id="div_sf_jjr">
+                    <img class="img_radio" id="img_sf_jjr" /><label class="label_radio">经纪人</label>
+                </div>
+            </div>
+            <div id="divSFTip" class="Warn" style="z-index: 999;"></div>
         </div>
         <div id="divGQ" class="div_row">
             <div class="div_row_left font_two">
