--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC/FC_CW.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC/FC_CW.cshtml
@@ -48,7 +48,7 @@
                 <span class="spanFWCZ">详细地址</span>
             </div>
             <div class="div_row_right">
-                <div id="divQYText" class="div_select_out SRK" style="z-index: 995;">
+                <div id="divQYText" class="div_select_out SRK" style="z-index: 991;">
                     <div id="divQYSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                         <input type="hidden" id="QYCode" />
                         <span id="spanQY" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择区域</span>
@@ -57,7 +57,7 @@
                     <div id="divQY" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                     </div>
                 </div>
-                <div id="divDDText" class="div_select_out SRK" style="z-index: 994;">
+                <div id="divDDText" class="div_select_out SRK" style="z-index: 991;">
                     <div id="divDDSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                         <span id="spanDD" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择地段</span>
                         <div class="span_select_arrow"></div>
@@ -66,10 +66,10 @@
                     </div>
                 </div>
                 <input id="JTDZ" column="JTDZ" class="input_input" type="text" style="width: 320px;" placeholder="请填写具体地址" />
-                <div id="divSZQYTip" class="Warn" style="z-index: 993;"></div>
+                <div id="divSZQYTip" class="Warn" style="z-index: 990;"></div>
             </div>
         </div>
-        <div id="divZJ" class="div_row" style="z-index: 992;">
+        <div id="divZJ" class="div_row" style="z-index: 989;">
             <div class="div_row_left font_two">
                 <span class="span_required">*</span>
                 <span class="spanFWCZ">租金</span>
@@ -78,7 +78,7 @@
                 <span id="spanZJ" class="span_spaninput SRK" style="display: inline-block;">
                     <input id="ZJ" maxlength="9" column="ZJ" class="input_spaninput spaninput_fontcolor" type="text" style="width: 124px" />
                 </span>
-                <div id="divZJDWText" class="div_select_out SRK" style="z-index: 991;">
+                <div id="divZJDWText" class="div_select_out SRK" style="z-index: 989;">
                     <div id="divZJDWSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                         <span id="spanZJDW" class="span_select spaninput_fontcolor" style="margin-top: 0">元/月</span>
                         <div class="span_select_arrow"></div>
@@ -86,7 +86,7 @@
                     <div id="divZJDW" class="div_select_dropdown" style="margin-top: -7px;">
                     </div>
                 </div>
-                <div id="divZJTip" class="Warn" style="z-index: 990;"></div>
+                <div id="divZJTip" class="Warn" style="z-index: 988;"></div>
             </div>
         </div>
         <div id="divSJ" class="div_row" style="z-index: 989; display: none;">
@@ -102,7 +102,7 @@
             </div>
             <div id="divSJTip" class="Warn" style="z-index: 988;"></div>
         </div>
-        <div id="divMJ" class="div_row" style="z-index: 987;">
+        <div id="divMJ" class="div_row" style="z-index: 985;">
             <div class="div_row_left font_two">
                 <span class="span_required">*</span>
                 <span class="spanFWCZ">面积</span>
@@ -113,7 +113,7 @@
                     <span class="spaninput_fontcolor">㎡</span>
                 </span>
             </div>
-            <div id="divMJTip" class="Warn" style="z-index: 986;"></div>
+            <div id="divMJTip" class="Warn" style="z-index: 984;"></div>
         </div>
         <div id="divXXXX" class="div_split" style="display: block; text-align: left;">
             <span class="span_split">详细信息</span>
@@ -129,7 +129,7 @@
                 <div id="divBTTip"></div>
             </div>
         </div>
-        <div id="divBCMS" class="div_row" style="height: 253px; z-index: 988;">
+        <div id="divBCMS" class="div_row" style="height: 253px; z-index: 983;">
             <div class="div_row_left" style="height: 170px; vertical-align: top;">
                 <span class="span_required" style="vertical-align: top">*</span>
                 <span id="spanBCMS" style="vertical-align: top">补充描述</span>
@@ -142,7 +142,7 @@
         </div>
         <div id="divFWZP" class="div_row_zp">
             <div class="div_row_left" style="height: 170px; vertical-align: top;">
-                <span class="span_required" style="vertical-align: top">&nbsp;</span>
+                <span class="span_required" style="vertical-align: top">*</span>
                 <span id="spanFWZP" style="vertical-align: top">上传照片</span>
             </div>
             <div class="div_row_right">
