--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ZXJC/ZXJC_JC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ZXJC/ZXJC_JC.cshtml
@@ -22,31 +22,23 @@
                 <div id="divBTTip"></div>
             </div>
         </div>
-        <div id="divOUTLB" class="div_row" style="z-index: 999">
+        <div id="divLB" class="div_row" style="z-index: 996;">
             <div class="div_row_left font_two">
                 <span class="span_required">*</span>
-                <span class="spanFWCZ">类别</span>
+                <span id="spanLB">类别</span>
             </div>
-            <div class="div_row_right">
-                <div id="divLBText" class="div_select_out SRK">
-                    <div id="divLBSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                        <input id="LBID" type="hidden"/>
-                        <span id="spanLB" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择类别</span>
-                        <div class="span_select_arrow"></div>
-                    </div>
-                    <div id="divLB" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
-                    </div>
-                </div>
-                <div id="divXLText" class="div_select_out SRK" style="display: none;">
-                    <div id="divXLSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                        <span id="spanXL" class="span_select spaninput_fontcolor" style="margin-top: 0px;">请选择小类</span>
-                        <div class="span_select_arrow"></div>
-                    </div>
-                    <div id="divXL" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
-                    </div>
-                </div>
+            <div id="divLBText" class="div_row_right">
             </div>
-            <div id="divOUTLBTip" class="Warn"></div>
+            <div id="divLBTip" class="Warn" style="z-index: 998;"></div>
+        </div>
+        <div id="divFWFW" class="div_row" style="z-index: 996;">
+            <div class="div_row_left">
+                <span class="span_required">*</span>
+                <span id="spanFWFW">服务范围</span>
+            </div>
+            <div id="divFWFWText" class="div_row_right">
+            </div>
+            <div id="divFWFWTip" class="Warn" style="z-index: 998;"></div>
         </div>
         <div id="divXXXX" class="div_split" style="display: block; text-align: left;">
             <span class="span_split">特色描述</span>
@@ -117,7 +109,7 @@
         <div id="divSZQY" class="div_row" style="z-index: 991;">
             <div class="div_row_left">
                 <span class="span_required">*</span>
-                <span class="spanFWCZ">详细地址</span>
+                <span class="spanFWCZ">商家地址</span>
             </div>
             <div class="div_row_right">
                 <div id="divQYText" class="div_select_out SRK" style="z-index: 990;">
